# kpi-dashboard

./: .env.example  .gitignore  ADMIN_EPIC.md  CLAUDE.md  ROADMAP.md  STATE.md  index.html  manifest.json  package-lock.json  package.json  pyproject.toml  sw.js  vite.config.js
.claude/: settings.json
css/: api-system.css  base.css  builder.css  components.css  data-entry.css  executive.css  forest-dashboard.css  gis.css  layout.css  mobile.css  print-summary.css  summary.css  variables.css
data/: ukraine-oblasts.json
etl/: __init__.py  canonical.py  derived.py  divergence.py  metrics.py  models.py  parser_annual_monthly.py  parser_osnovni.py  parsers_animals.py  parsers_reference.py  parsers_salary.py  reference_aliases.py  report_metadata.py  revisions.py  utils.py
js/: app.js  auth.js  auto-refresh.js  charts-common.js  config.js  db-kpi.js  db-utils.js  event-bus.js  export.js  file-handler.js  filters.js  lazy-libs.js  modals.js  navigation.js  parse-kpi.js  pwa.js  realtime.js  render-all.js  render-finance.js  render-volumes.js  security.js  state.js  theme.js  ui-helpers.js  utils.js  validation.js
public/: manifest.json  sw.js
scripts/: config.ini.example  eod-sync.bat  eod-sync.py
sql/: 15-rename-codes-and-revisions.sql  15-rollback.sql  16-fix-animals-chart-bug.sql  16-rollback.sql  17-fact-revisions-unique-key.sql  17-rollback.sql  18-reference-revisions-unique.sql  18-rollback.sql  19-fact-revisions-unique-key-salary-rollback.sql  19-fact-revisions-unique-key-salary.sql  20-fact-revisions-unique-key-animal-rollback.sql  21-rollback.sql  (+29 more)
(+128 files in other folders)
